--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap');
+
+/*----------------------------------------Header-----------------------------------------*/
+.header-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 30vh;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background-image {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 30vh;
+  border-bottom: 5px black solid ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-wrapper {
+  display: flex;
+  align-items: center;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-link {
+  display: flex;
+  flex-direction: row;
+flex-wrap: wrap;
+  text-decoration: none;
+  font-family: "Abril Fatface", cursive;
+  font-size: xx-large;
+  color: black;
+  width: 25%;
+
+}
+
+
+.link-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
+  padding-right: 5px;
+  font-family: 'Merriweather', serif;
+  font-size: xx-large;
+  
 }
 
-.App-link {
-  color: #61dafb;
+#links {
+  text-decoration: none;
+  color: black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*---------------------------------------Home-Page-----------------------------------------*/
+/*---------------------------------------About-Page----------------------------------------*/
+/*---------------------------------------Contact-Page-----------------------------------------*/
+/*----------------------------------------Page-----------------------------------------*/
